[tool.poetry]
name = "srai-core"
version = "0.14.2"
description = "A library core functions used in other SRAI libraries."
authors = ["Jaap Oosterbroek <jaap.oosterbroek@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/southriverai/srai-core"
repository = "https://github.com/southriverai/srai-core"
keywords = ["SRAI", "TOOLS"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.18.61"
paramiko = "^3.3.1"
pymongo = "^4.6.1"
pydantic = "^2.8.2"

[tool.poetry.dev-dependencies]
black = "23.3.0"
flake8 = "6.0.0"
twine = "5.1.1"
wheel = "0.43.0"
setuptools = "70.2.0"

[tool.poetry.scripts]
srai_build = "srai_core.script.srai_build:main"
srai_release = "srai_core.script.srai_release:main"
srai_deploy = "srai_core.script.srai_deploy:main"
build_docker = "srai_core.script.build_docker:main"
deploy_docker = "srai_core.script.deploy_docker:main"
deploy_docker_local = "srai_core.script.deploy_docker_local:main"
deploy_docker_remote_ssh = "srai_core.script.deploy_docker_remote_ssh:main"
stop_docker_remote = "srai_core.script.stop_docker_remote:main"
release_docker_aws_local = "srai_core.script.release_docker_aws_local:main"
release_docker_aws_ssh = "srai_core.script.release_docker_aws_ssh:main"
release_code_public = "srai_core.script.release_code_public:main"
create_repository = "srai_core.script.create_repository:main"
list_images = "srai_core.script.list_images:main"
list_containers_ssh = "srai_core.script.list_containers_ssh:main"
list_container_status_ssh = "srai_core.script.list_container_status_ssh:main"
list_commands = "srai_core.script.list_commands:main"
docker_logs_ssh = "srai_core.script.docker_logs_ssh:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry==1.8.3"]
build-backend = "poetry.core.masonry.api"
