[tool.poetry]
name = "srai-core"
version = "0.15.1"
description = "A library core functions used in other SRAI libraries."
authors = ["Jaap Oosterbroek <jaap.oosterbroek@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/southriverai/srai-core"
repository = "https://github.com/southriverai/srai-core"
keywords = ["SRAI", "TOOLS"]

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.3.1"
pydantic = "^2.8.2"
pymongo = "^4.6.1"
boto3 = "^1.18.61"

[tool.poetry.dev-dependencies]
black = "23.3.0"
flake8 = "6.0.0"
twine = "5.1.1"
wheel = "0.43.0"
setuptools = "70.2.0"

[tool.poetry.scripts]
srai_help = "srai_core.script.srai_help:main"
srai_build = "srai_core.script.srai_build:main"
srai_release = "srai_core.script.srai_release:main"
srai_deploy = "srai_core.script.srai_deploy:main"
srai_image_list = "srai_core.script.srai_image_list:main"
srai_killall = "srai_core.script.srai_killall:main"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry==1.8.3"]
build-backend = "poetry.core.masonry.api"
